fix images and dropdowns on mobile devices, delete unnecessary files

--- a/src/components/common/card.scss
+++ b/src/components/common/card.scss
@@ -15,24 +15,29 @@
     width: 70%;
     margin: 2rem auto 1rem auto;
   }
-
-  @media screen and (max-width: 800px) {
-    width: 95%;
-  }
-
   @media screen and (max-width: 1020px) {
     width: 80%;
     margin: 0 auto;
     margin-top: 30px;
   }
 
+  @media screen and (max-width: 800px) {
+    width: 95%;
+  }
+
+  @media screen and (max-width: 500px) {
+    height: 225px;
+  }
   &-left {
+    position: relative;
     min-width: 185px;
     height: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
-
+    @media screen and (max-width: 500px) {
+      min-width: 150px;
+    }
     i {
       align-self: center;
       opacity: 20%;
@@ -45,8 +50,10 @@
     max-width: 100%;
     height: auto;
 
-    &:hover {
-      transform: scale(1.1);
+    @media screen and (min-width: 800px) {
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 
