--- a/src/components/common/header.scss
+++ b/src/components/common/header.scss
@@ -48,7 +48,7 @@
       margin-right: 3rem;
     }
     &:last-of-type {
-      margin-right: 2rem;
+      margin-right: 3rem;
     }
 
     &:hover {
