--- a/src/components/common/pagination.scss
+++ b/src/components/common/pagination.scss
@@ -6,7 +6,6 @@
   align-items: center;
   padding: 1rem;
   margin: 3rem auto 5rem auto;
-  background-color: $color-grey-light;
   &__list {
     display: flex;
     justify-content: center;
