--- a/src/components/searchMovieParams.scss
+++ b/src/components/searchMovieParams.scss
@@ -41,4 +41,8 @@
   @media screen and (max-width: 1050px) {
     justify-content: center;
   }
+
+  @media screen and (max-width: 400px) {
+    justify-content: flex-start;
+  }
 }
